tests/fixtures/language/v3/valid/value-types/value-type-with-derived.allium
-- allium: 3

value TimeRange {
    start: Timestamp
    end: Timestamp

    -- Derived
    duration: end - start
}

entity Meeting {
    range: TimeRange
}

rule ScheduleMeeting {
    when: ScheduleMeeting(start, end)
    ensures: Meeting.created(range: TimeRange{start: start, end: end})
}
