tests/fixtures/language/v3/invalid/enums/undefined-enum-reference.allium
-- allium: 3

entity Order {
    priority: NotAnEnum
}

rule SetPriority {
    when: SetPriority(priority)
    ensures: Order.created(priority: priority)
}
